Quitar scrollbar (bug colision precoz adversario)

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ html  {
 	margin: 0px;
 	padding: 0px;
 	height: 100%;
+	overflow-y: hidden
 }
 
 body {
